--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CST3145 COURSEWORK1</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="courses.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -11,7 +13,7 @@
 <body>
     <main id="app">
 		<div class="container mb-3">
-			<h1 class="text-center">course work 1 lessons</h1>
+			<h1 class="text-center">A1 Lessons</h1>
 
 			<div class="d-flex">
 				<button class="btn btn-primary fs-3 p-3 rounded-circle ms-auto " v-on:click="showCheckOut"
@@ -140,7 +142,7 @@
 			// data object
 			data: {
 				showProduct: true,
-				lessons: lessons,
+				lessons: modules,
 				// cart container array
 				cart: [],
 				// search term to be bounded from model
