--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,253 +11,252 @@
     <script src="courses.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
+
 <body>
     <main id="app">
-		<div class="container mb-3">
-			<h1 class="text-center">A1 Lessons</h1>
+        <div class="container mb-3">
+            <h1 class="text-center">A1 Lessons</h1>
 
-			<div class="d-flex">
-				<button class="btn btn-primary fs-3 p-3 rounded-circle ms-auto " v-on:click="showCheckOut"
-					:disabled="!cartSize > 0">{{cartSize}} <i class="bi bi-bag-plus"></i></button>
-			</div>
+            <div class="d-flex">
+                <button class="btn btn-secondary fs-3 p-3  ms-auto " v-on:click="showCheckOut"
+                    :disabled="!cartSize > 0">{{cartSize}} <i class="bi bi-bag-check-fill"></i></button>
+            </div>
 
-			<div class="container" v-if="showProduct">
-				<div class="d-flex align-items-end gap-3 flex-wrap">
+            <div class="container" v-if="showProduct">
+                <div class="d-flex align-items-end gap-3 flex-wrap">
 
-					<div>
-						<input type="text" class="form-control" v-model="searchTerm"
-							placeholder="search for a lesson...">
-					</div>
-
-
-					<div>
-						<label for="sortAttribute">Sort By:</label>
-						<select v-model="sortAttribute" class="form-select">
-							<option value="title">Title</option>
-							<option value="subject">Subject</option>
-							<option value="location">Location</option>
-							<option value="price">Price</option>
-							<option value="spaces">Spaces</option>
-						</select>
-					</div>
-
-					<div>
-						<label for="sortOrder">Sort Order:</label>
-						<select v-model="sortOrder" class="form-select">
-							<option value="asc">Ascending</option>
-							<option value="desc">Descending</option>
-						</select>
-					</div>
-
-				</div>
+                    <div>
+                        <input type="text" class="form-control" v-model="searchTerm"
+                            placeholder="search for a lesson...">
+                    </div>
 
 
-				<div class="row">
-					<div class="col-sm-4" v-for="product in sortLessons">
-						<div class="card mb-3 rounded-0 border border-success-subtle">
-							<div class="card-header d-flex">
-								<div>
-									<p>subject: {{product.subject}}</p>
-									<h5>title: {{product.title}}</h5>
-								</div>
-								<i :class="product.icon" class="fs-1 ms-auto"></i>
-							</div>
-							<div class="card-body">
-								<p>price: {{product.price}} AED</p>
-								<p>Spaces: {{product.spaces}}</p>
-								<p>location: {{product.location}}</p>
-							</div>
-							<div class="card-footer">
-								<!-- add to cart button -->
-								<button class="btn btn-primary rounded-0" v-on:click='addToCart(product)'
-									:disabled="product.spaces === 0">Add to
-									cart</button>
-								<!-- remove from cart button -->
-								<button class="btn btn-danger rounded-0" v-on:click='removeProduct(product)'>X</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+                    <div>
+                        <label for="sortAttribute">Sort By:</label>
+                        <select v-model="sortAttribute" class="form-select">
+                            <option value="title">Title</option>
+                            <!-- <option value="subject">Subject</option> -->
+                            <option value="location">Location</option>
+                            <option value="price">Price</option>
+                            <option value="spaces">Spaces</option>
+                        </select>
+                    </div>
+        <div>
+                <label for="sortOrder">Sort Order:</label>
+                <select v-model="sortOrder" class="form-select">
+                <option value="asc">Ascending</option>
+                <option value="desc">Descending</option>
+                </select>
+        </div>
 
-			<!-- cart and checkout -->
-			<div class="container mt-4" v-else>
-				<div class="row g-3">
-					<div class="col-sm-8 border rounded-3">
-						<div v-for="item in cart " class="border-bottom">
-							<div class="col-sm-12  mb-4 p-3">
-								<div class="row">
-									<div class="col-sm-4">
-										<i :class="item.lesson.icon" class="display-1 ms-auto"></i>
-									</div>
-									<div class="col-sm-4">
-										<p></p>Title: {{item.lesson.title}}</p>
-										<p>quantity: {{item.amount}}</p>
-									</div>
-									<div class="col-sm-4">
-										<p>price: {{item.lesson.price}}</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="container">
-							<div class="row justify-content-center">
-								<div class="col-md-12">
-									<div class="card">
-										<div class="card-body">
-											<h5 class="card-title">User Information</h5>
-											<form>
-												<div class="mb-3">
-													<label for="username" class="form-label">Username</label>
-													<input type="text" v-model="username" class="form-control"
-														id="username" name="username" placeholder="Enter your username"
-														required>
-												</div>
-												<div class="mb-3">
-													<label for="phone" class="form-label">Phone Number</label>
-													<input type="tel" v-model="phonenumber" class="form-control"
-														id="phone" name="phone" placeholder="Enter your phone number"
-														required>
-												</div>
-												<button type="submit" class="btn btn-primary"
-													:disabled="!validateUserCredentials"
-													onclick="alert('Order completed!')">Submit</button>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+                </div>
 
-			</div>
-	</main>
+           <div class="row">
+            <div class="col-sm-4" v-for="product in sortLessons">
+            <div class="card mb-3 rounded-0 border border-success-subtle">
+            <div class="card-header d-flex">
+            <div>
+                                    
+            <h5>title: {{product.title}}</h5>
+            </div>
+                <i :class="product.icon" class="fs-1 ms-auto"></i>
+                </div>
+                <div class="card-body">
+                        <p>price: {{product.price}} AED</p>
+                        <p>Spaces: {{product.spaces}}</p>
+                        <p>location: {{product.location}}</p>
+                </div>
+                    <div class="card-footer">
+                               
+                            <button class="btn btn-info rounded " v-on:click='addToCart(product)'
+                            :disabled="product.spaces === 0">Add to
+                            cart</button>
+                            <!-- remove from cart button -->
+                            <button class="btn btn-danger rounded" v-on:click='removeProduct(product)'>Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- cart and checkout -->
+            <div class="container mt-4" v-else>
+            <div class="row g-3">
+             <div class="col-sm-8 border rounded-3">
+            <div v-for="item in cart " class="border-bottom">
+             <div class="col-sm-12  mb-4 p-3">
+             <div class="row">
+               <div class="col-sm-4">
+                <i :class="item.lesson.icon" class="display-1 ms-auto"></i>
+                </div>
+                <div class="col-sm-4">
+                <p></p>Title: {{item.lesson.title}}</p>
+                <p>quantity: {{item.amount}}</p>
+                </div>
+                <div class="col-sm-4">
+                <p>price: {{item.lesson.price}}</p>
+                </div>
+                    </div>
+                       </div>
+                        </div>
+                        </div>
+                <div class="col-sm-4">
+                <div class="container">
+                <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <div class="card">
+                    <div class="card-body">
+                    <h5 class="card-title">User Information</h5>
+                    <form>
+                    <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" v-model="username" class="form-control"
+                id="username" name="username" placeholder="Enter your username"
+                required>
+                </div>
+                <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="tel" v-model="phonenumber" class="form-control"
+                id="phone" name="phone" placeholder="Enter your phone number"required>
+                </div>
+                    <button type="submit" class="btn btn-info"
+                            :disabled="!validateUserCredentials"
+                            onclick="alert('Order Submitted!')">Submit</button>
+                       </form>
+                             </div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+    </main>
     <script src="modules.js"></script>
-	<script>
-		// mount VUE instance
-		var app = new Vue({
-			el: '#app',
-			// data object
-			data: {
-				showProduct: true,
-				lessons: modules,
-				// cart container array
-				cart: [],
-				// search term to be bounded from model
-				searchTerm: '',
-				//a user must provide “Name” and “Phone number” before can click on the checkout button (1%)
-				username: '',
-				phonenumber: '',
-				filteredLessons: [],
-				sortAttribute: 'subject',
-				sortOrder: 'asc',
-				sortedLessons: [],
+    <script>
+        // mount VUE instance
+        var app = new Vue({
+            el: '#app',
+            // data object
+            data: {
+                showProduct: true,
+                lessons: modules,
+                // cart container array
+                cart: [],
+                // search term to be bounded from model
+                searchTerm: '',
+                //a user must provide “Name” and “Phone number” before can click on the checkout button (1%)
+                username: '',
+                phonenumber: '',
+                filteredLessons: [],
+                sortAttribute: 'subject',
+                sortOrder: 'asc',
+                sortedLessons: [],
 
-			},
-			// vue js app methods
-			methods: {
-				// add to cart method
-				addToCart(lesson) {
-					// push the product id to cart so as to search product by id and display it in cart page
-					// check if lessons spaces is greater than zero
-					if (lesson.spaces > 0) {
-						// take one from total space
-						lesson.spaces--
-						// find current lesson object in cart
-						var cartIndex = this.cart.findIndex(i => i.lesson === lesson)
-						// if lesson is already in cart increment amount by 1 so as to prevent duplicates and save space and memory
-						if (cartIndex > -1) {
-							this.cart[cartIndex].amount++
-						} else {
-							// is lesson is not in cart add new lesson object
-							this.cart.push({
-								lesson: lesson,
-								amount: 1
-							})
-						}
-					}
+            },
+            // vue js app methods
+            methods: {
+                // add to cart method
+                addToCart(lesson) {
+                    // push the product id to cart so as to search product by id and display it in cart page
+                    // check if lessons spaces is greater than zero
+                    if (lesson.spaces > 0) {
+                        // take one from total space
+                        lesson.spaces--
+                        // find current lesson object in cart
+                        var cartIndex = this.cart.findIndex(i => i.lesson === lesson)
+                        // if lesson is already in cart increment amount by 1 so as to prevent duplicates and save space and memory
+                        if (cartIndex > -1) {
+                            this.cart[cartIndex].amount++
+                        } else {
+                            // is lesson is not in cart add new lesson object
+                            this.cart.push({
+                                lesson: lesson,
+                                amount: 1
+                            })
+                        }
+                    }
 
-				},
-				removeProduct(lesson) {
-					// remove product from cart container array
-					const index = this.cart.findIndex(i => i.lesson === lesson)
-					// check for last index 
-					if (index !== -1) {
-						// if lesson space already in cart deduct one amount 
-						this.cart[index].amount--
-						// add overall space when lesson is removed 
-						lesson.spaces += 1;
-						// else remove all lessons and update to original value
-						if (this.cart[index].amount == 0) {
-							this.cart.splice(index, 1);
-						}
-					}
-					// when a product is removed from cart add one back to space
+                },
+                removeProduct(lesson) {
+                    // remove product from cart container array
+                    const index = this.cart.findIndex(i => i.lesson === lesson)
+                    // check for last index 
+                    if (index !== -1) {
+                        // if lesson space already in cart deduct one amount 
+                        this.cart[index].amount--
+                        // add overall space when lesson is removed 
+                        lesson.spaces += 1;
+                        // else remove all lessons and update to original value
+                        if (this.cart[index].amount == 0) {
+                            this.cart.splice(index, 1);
+                        }
+                    }
+                    // when a product is removed from cart add one back to space
 
-				},
-				// check for spaces
-				// you cannot add a course more the number of space capacity it has. 
-				checkItemCount(id) {
-					itemCount = 0;
-					for (i = 0; i < this.cart.length; i++) {
-						// check for current instance of is
-						if (this.cart[i] === id) {
-							itemCount += 1;
-						}
-					}
-					return itemCount;
-				},
-				// check if to show checkout page
-				showCheckOut() {
-					this.showProduct = this.showProduct ? false : true;
-				},
+                },
+                // check for spaces
+                // A module cannot be added more the number of space capacity it has. 
+                checkItemCount(id) {
+                    itemCount = 0;
+                    for (i = 0; i < this.cart.length; i++) {
+                        // check for current instance of is
+                        if (this.cart[i] === id) {
+                            itemCount += 1;
+                        }
+                    }
+                    return itemCount;
+                },
+                // check if to show checkout page
+                showCheckOut() {
+                    this.showProduct = this.showProduct ? false : true;
+                },
 
 
-			},
-			// computed values object
-			computed: {
-				// this method search the database(product.js) for 
-				searchLessons() {
-					const searchTerm = this.searchTerm.toLowerCase();
-					return this.lessons.filter(lesson =>
-						lesson.title.toLowerCase().includes(searchTerm) || lesson.location.toLowerCase().includes(searchTerm)
-					);
+            },
+            // computed values object
+            computed: {
+                // this method search the database(modules.js) for 
+                searchLessons() {
+                    const searchTerm = this.searchTerm.toLowerCase();
+                    return this.lessons.filter(lesson =>
+                        lesson.title.toLowerCase().includes(searchTerm) || lesson.location.toLowerCase().includes(searchTerm)
+                    );
 
-				},
-				sortLessons() {
-					return this.searchLessons.slice().sort((a, b) => {
-						const valueA = a[this.sortAttribute];
-						const valueB = b[this.sortAttribute];
+                },
+                sortLessons() {
+                    return this.searchLessons.slice().sort((a, b) => {
+                        const valueA = a[this.sortAttribute];
+                        const valueB = b[this.sortAttribute];
 
-						// Use localeCompare for string comparison, subtract for numeric comparison
-						const comparison = typeof valueA === 'string'
-							? valueA.localeCompare(valueB)
-							: valueA - valueB;
+                        // Use localeCompare for string comparison, subtract for numeric comparison
+                        const comparison = typeof valueA === 'string'
+                            ? valueA.localeCompare(valueB)
+                            : valueA - valueB;
 
-						return this.sortOrder === 'asc' ? comparison : -comparison;
-					});
-				},
+                        return this.sortOrder === 'asc' ? comparison : -comparison;
+                    });
+                },
 
-				// get cart length
-				cartSize: function () {
-					return this.cart.reduce((sum, lesson) => sum + lesson.amount, 0)
-				},
-				// check if product can be added to cart
-				canAddToCart(lessons) {
-					return this.lessons.spaces > this.checkItemCount(lessons.id);
-				},
-				// function to validate phone number and username input field values
-				validateUserCredentials() {
-					return /^[a-zA-Z]+$/.test(this.username) && /^\d+$/.test(this.phonenumber)
-				}
+                // get cart length
+                cartSize: function () {
+                    return this.cart.reduce((sum, lesson) => sum + lesson.amount, 0)
+                },
+                // check if product can be added to cart
+                canAddToCart(lessons) {
+                    return this.lessons.spaces > this.checkItemCount(lessons.id);
+                },
+                // function to validate phone number and username input field values
+                validateUserCredentials() {
+                    return /^[a-zA-Z]+$/.test(this.username) && /^\d+$/.test(this.phonenumber)
+                }
 
-			},
-		}
-		);
+            },
+        }
+        );
 
-	</script>
+    </script>
 </body>
+
 </html>
