--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
     <main id="app">
-        <div class="container mb-3">
+        <div class="container mb-8">
             <h1 class="text-center">A1 Lessons</h1>
 
             <div class="d-flex">
                 <button class="btn btn-secondary fs-3 p-3  ms-auto " v-on:click="showCheckOut"
-                    :disabled="!cartSize > 0">{{cartSize}} <i class="bi bi-bag-check-fill"></i></button>
+                    :disabled="!cartSize > 0 && showProduct">{{cartSize}} <i class="bi bi-bag-check-fill"></i></button>
             </div>
 
             <div class="container" v-if="showProduct">
@@ -41,38 +41,40 @@
                             <option value="spaces">Spaces</option>
                         </select>
                     </div>
-        <div>
-                <label for="sortOrder">Sort Order:</label>
-                <select v-model="sortOrder" class="form-select">
-                <option value="asc">Ascending</option>
-                <option value="desc">Descending</option>
-                </select>
-        </div>
+                    <div>
+                        <label for="sortOrder">Sort Order:</label>
+                        <select v-model="sortOrder" class="form-select">
+                            <option value="asc">Ascending</option>
+                            <option value="desc">Descending</option>
+                        </select>
+                    </div>
+
 
                 </div>
+                <div class="row">
+                    <div class="col-sm-6" v-for="product in sortLessons">
+                        <div class="card mb-3 mt-3 rounded border border-success-subtle">
+                            <div class="card-header d-flex">
+                                <div>
 
-           <div class="row">
-            <div class="col-sm-4" v-for="product in sortLessons">
-            <div class="card mb-3 rounded-0 border border-success-subtle">
-            <div class="card-header d-flex">
-            <div>
-                                    
-            <h5>title: {{product.title}}</h5>
-            </div>
-                <i :class="product.icon" class="fs-1 ms-auto"></i>
-                </div>
-                <div class="card-body">
-                        <p>price: {{product.price}} AED</p>
-                        <p>Spaces: {{product.spaces}}</p>
-                        <p>location: {{product.location}}</p>
-                </div>
-                    <div class="card-footer">
-                               
-                            <button class="btn btn-info rounded " v-on:click='addToCart(product)'
-                            :disabled="product.spaces === 0">Add to
-                            cart</button>
-                            <!-- remove from cart button -->
-                            <button class="btn btn-danger rounded" v-on:click='removeProduct(product)'>Remove</button>
+
+                                    <h5>title: {{product.title}}</h5>
+                                </div>
+                                <i :class="product.icon" class="fs-1 ms-auto"></i>
+                            </div>
+                            <div class="card-body">
+                                <p>price: {{product.price}} AED</p>
+                                <p>Spaces: {{product.spaces}}</p>
+                                <p>location: {{product.location}}</p>
+                            </div>
+                            <div class="card-footer">
+
+                                <button class="btn btn-info rounded " v-on:click='addToCart(product)'
+                                    :disabled="product.spaces === 0">Add to
+                                    cart</button>
+                                <!-- remove from cart button -->
+                                <button class="btn btn-danger rounded"
+                                    v-on:click='removeProduct(product)'>Remove</button>
                             </div>
                         </div>
                     </div>
@@ -81,50 +83,53 @@
 
             <!-- cart and checkout -->
             <div class="container mt-4" v-else>
-            <div class="row g-3">
-             <div class="col-sm-8 border rounded-3">
-            <div v-for="item in cart " class="border-bottom">
-             <div class="col-sm-12  mb-4 p-3">
-             <div class="row">
-               <div class="col-sm-4">
-                <i :class="item.lesson.icon" class="display-1 ms-auto"></i>
-                </div>
-                <div class="col-sm-4">
-                <p></p>Title: {{item.lesson.title}}</p>
-                <p>quantity: {{item.amount}}</p>
-                </div>
-                <div class="col-sm-4">
-                <p>price: {{item.lesson.price}}</p>
-                </div>
-                    </div>
-                       </div>
-                        </div>
-                        </div>
-                <div class="col-sm-4">
-                <div class="container">
-                <div class="row justify-content-center">
-                <div class="col-md-12">
-                    <div class="card">
-                    <div class="card-body">
-                    <h5 class="card-title">User Information</h5>
-                    <form>
-                    <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" v-model="username" class="form-control"
-                id="username" name="username" placeholder="Enter your username"
-                required>
-                </div>
-                <div class="mb-3">
-                <label for="phone" class="form-label">Phone Number</label>
-                <input type="tel" v-model="phonenumber" class="form-control"
-                id="phone" name="phone" placeholder="Enter your phone number"required>
-                </div>
-                    <button type="submit" class="btn btn-info"
-                            :disabled="!validateUserCredentials"
-                            onclick="alert('Order Submitted!')">Submit</button>
-                       </form>
-                             </div>
+                <div class="row g-3">
+                    <div class="col-sm-8 border rounded-3">
+                        <div v-for="item in cart " class="border-bottom">
+                            <div class="col-sm-12  mb-4 p-3">
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <i :class="item.lesson.icon" class="display-1 ms-auto"></i>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p></p>Title: {{item.lesson.title}}</p>
+                                        <p>quantity: {{item.amount}}</p>
+                                        <button class="btn btn-danger rounded"
+                                            v-on:click='removeProduct(item.lesson)'>Remove</button>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p>price: {{item.lesson.price}}</p>
+                                    </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-md-12">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">User Information</h5>
+                                            <form>
+                                                <div class="mb-3">
+                                                    <label for="username" class="form-label">Username</label>
+                                                    <input type="text" v-model="username" class="form-control"
+                                                        id="username" name="username" placeholder="Enter your username"
+                                                        required>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="phone" class="form-label">Phone Number</label>
+                                                    <input type="tel" v-model="phonenumber" class="form-control"
+                                                        id="phone" name="phone" placeholder="Enter your phone number"
+                                                        required>
+                                                </div>
+                                                <button type="submit" class="btn btn-info"
+                                                    :disabled="!validateUserCredentials"
+                                                    onclick="alert('Order Submitted!')">Submit</button>
+                                            </form>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -132,6 +137,8 @@
                 </div>
 
             </div>
+        </div>
+        </div>
     </main>
     <script src="modules.js"></script>
     <script>
